2006-01-31  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/ddc/edid.h:
	* hw/xfree86/ddc/interpret_edid.c: (get_dt_md_section):

	Further bug #5386 fixes: Fix some problems with the EDID code:
	Some bitoffsets were wrong.
	Unknown Detailed Sections weren't handled properly and defaulted to
	Detailed Timing.

2006-01-31  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/utils/cvt/.cvsignore:
	* hw/xfree86/utils/cvt/cvt.c: (xf86CVTMode), (CVTCheckStandard),
	(PrintModeline), (main):

	Bring the cvt utility up to date with bug #5386 changes.
	Fix 2 issues with the generator routine: the allocated modeline wasn't
	nulled and mode->name's \0 wasn't copied over.
	PrintModeLine was rewritten and HDisplay gets rounded up to
	character width instead of refused.

2006-01-31  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/common/xf86Mode.c: (xf86CheckModeForMonitor):

	Accept modes with less than 25% horizontal blanking again (you can
	push old gtf timing to below 25%), only stop cvt reduced blanking.
	Users should be free to blow up their monitors if they so choose.

2006-01-30  Donnie Berkholz  <spyderous@gentoo.org>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:
	Update to build against Mesa trunk.

2006-01-27  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/os-support/shared/libc_wrapper.c: (xf86random):
	* hw/xfree86/os-support/xf86_ansic.h:
	* hw/xfree86/os-support/xf86_libc.h:
	Add libc_wrapper support for random(), which will be used in upcoming
	EXA memory manager work.

2006-01-27  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/dixmods/Makefile.am:
	* hw/xgl/glx/Makefile.am:
	Remove leftover variables for cfb24 build, and finish commenting out
	Xglx standalone stuff, which some versions of automake get whiny about.

2006-01-27  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* hw/xfree86/scanpci/pci.ids:
	* hw/xfree86/scanpci/xf86PciStdIds.h:
	update pci ids

2006-01-25  Donnie Berkholz  <spyderous@gentoo.org>

	* GL/symlink-mesa.sh: